--- a/signInpage.html
+++ b/signInpage.html
@@ -83,18 +83,18 @@
         <h2>Sign Up</h2>
         <form>
             <div class="form-group">
-                <label for="username">Username</label>
+                <label for="OrganizationId">Organization ID*</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <label for="username">Username*</label>
+                <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">Password*</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit" class="btn">Register</button>
+            <button type="submit" class="btn">login</button>
         </form>
     </div>
 
