--- a/ourWebsite.html
+++ b/ourWebsite.html
@@ -186,20 +186,20 @@
             <li><a href="#price">Pricing</a></li>
 
         </ul>
-        <button class="signIn" onclick="redirecttopage()" >Login</button>
+        <button class="signIn" onclick="location.href='login.html';">Login</button>
     </header>
     </nav>
     <section class="content-container">
         <div class="text-content">
             <p class="s1">Easy to track and maintain the progress</p>
             <p class="slogan">All-in-one platform for seamless student tracking, scheduling, billing, and enhanced operational efficiency</p>
-            <button class="start" onclick="redirectto()"  >Start Here</button>
+            <button class="start" type="submit" onclick="location.href='login.html';">Start Here</button>
         </div>
         <img src="driving.png" alt="Driving School Image">
     </section>
     
     
-    <script type="text/javascript" src="script.js"></script>
+    <!-- <script type="text/javascript" src="script.js"></script> -->
 
     <footer class="last">
       <div>
@@ -229,3 +229,4 @@
 </body>
 
 </html>
+
